tournament routes work
