# juggertube/endpoints/channels/channel_blueprint.py
@@ -1,7 +1,10 @@
+import ast
+import json
+
 from flask import Blueprint, request, render_template, current_app
 from flask_login import login_required
 
-from juggertube.api.channel_api_blueprint import channel_api_blueprint
+from juggertube.api import channel_api_blueprint
 from juggertube.webforms import ChannelForm
 
 channel_blueprint = Blueprint('channels', __name__, template_folder='templates')
@@ -14,13 +17,21 @@ def add_channel():
         form = ChannelForm(request.form)
 
         if request.method == 'GET':
+            response = channel_api_blueprint.get_owner_choices()
+            data = response.get_json()
+
+            form.owner.choices = data
             return render_template('post-channel.html', form=form)
 
         if request.method == 'POST':
+            owners_dict = ast.literal_eval(form.owner.data)
+
             post_data = {
                 "name": form.name.data,
-                "link": form.link.data
+                "link": form.link.data,
+                "owners": [owners_dict['choice_id']]
             }
+
             response = client.post('/api/channels/add', query_string=post_data)
             data = response.get_json()
             return data
@@ -67,4 +78,4 @@ def delete_channel(channel_id):
 def get_channels():
     response = channel_api_blueprint.get_channels()
     channels_list = response.get_json()
-    return render_template('show-channels.html', team_list=channels_list)
+    return render_template('show-channels.html', channel_list=channels_list)
